# src/main/java/com/example/GrandWorldMSpec/generated/model/SubscriptionResponse.java
@@ -1,0 +1,134 @@
+package com.example.GrandWorldMSpec.generated.model;
+
+import java.util.Objects;
+import com.example.GrandWorldMSpec.generated.model.SubscriptionInfo;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * The data model of subscriber report.
+ */
+@ApiModel(description = "The data model of subscriber report.")
+@Validated
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2020-03-10T15:19:04.437+08:00")
+
+public class SubscriptionResponse   {
+  @JsonProperty("key")
+  private String key = null;
+
+  @JsonProperty("status")
+  private String status = null;
+
+  @JsonProperty("subscriptionInfo")
+  private SubscriptionInfo subscriptionInfo = null;
+
+  public SubscriptionResponse key(String key) {
+    this.key = key;
+    return this;
+  }
+
+  /**
+   * UUID that rule engine service generated, null if this is the first time.
+   * @return key
+  **/
+  @ApiModelProperty(value = "UUID that rule engine service generated, null if this is the first time.")
+
+
+  public String getKey() {
+    return key;
+  }
+
+  public void setKey(String key) {
+    this.key = key;
+  }
+
+  public SubscriptionResponse status(String status) {
+    this.status = status;
+    return this;
+  }
+
+  /**
+   * success or error (status of the subscription)
+   * @return status
+  **/
+  @ApiModelProperty(value = "success or error (status of the subscription)")
+
+
+  public String getStatus() {
+    return status;
+  }
+
+  public void setStatus(String status) {
+    this.status = status;
+  }
+
+  public SubscriptionResponse subscriptionInfo(SubscriptionInfo subscriptionInfo) {
+    this.subscriptionInfo = subscriptionInfo;
+    return this;
+  }
+
+  /**
+   * A subscription info entity.
+   * @return subscriptionInfo
+  **/
+  @ApiModelProperty(value = "A subscription info entity.")
+
+  @Valid
+
+  public SubscriptionInfo getSubscriptionInfo() {
+    return subscriptionInfo;
+  }
+
+  public void setSubscriptionInfo(SubscriptionInfo subscriptionInfo) {
+    this.subscriptionInfo = subscriptionInfo;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    SubscriptionResponse subscriptionResponse = (SubscriptionResponse) o;
+    return Objects.equals(this.key, subscriptionResponse.key) &&
+        Objects.equals(this.status, subscriptionResponse.status) &&
+        Objects.equals(this.subscriptionInfo, subscriptionResponse.subscriptionInfo);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(key, status, subscriptionInfo);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class SubscriptionResponse {\n");
+    
+    sb.append("    key: ").append(toIndentedString(key)).append("\n");
+    sb.append("    status: ").append(toIndentedString(status)).append("\n");
+    sb.append("    subscriptionInfo: ").append(toIndentedString(subscriptionInfo)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
