# swagger.yaml
@@ -11,75 +11,99 @@ basePath: /
 schemes:
   - http
   - https
+consumes:
+  - application/json
+produces:
+  - application/json
 tags:
-  - name: Rule Management
-    description: Three interfaces of rule Management.
+  - name: rule management
+    description: Interfaces for rule management.
 paths:
   /ruleSubscription:
     post:
       tags:
-        - Rule Management
-      summary: rule subscription
-      description: rule subscription
-      operationId: ruleSubscribe
+        - rule management
+      description: Rule engine subscriber report.
+      consumes: []
+      operationId: subscribeRules
       parameters:
-        - name: subscriberReport
+        - name: subscriberRequest
           in: body
-          description: >-
-            uuid that rule engine service generated, null if this is the first
-            time.
+          description: Rule engine subscriber report reuqest.
           schema:
-            $ref: '#/definitions/SubscriberReport'
+            $ref: '#/definitions/subscriptionRequest'
       responses:
         '200':
-          description: successful operation
+          description: successful response of rule engine subscriber report.
           schema:
-            $ref: '#/definitions/SubscriberReport'
+            $ref: '#/definitions/subscriptionResponse'
         '400':
-          description: Invalid status value
-  /tableRule:
+          $ref: '#/responses/invalidRequest'
+        '401':
+          $ref: '#/responses/unauthorised'
+        '404':
+          description: The search results do not exist.
+          schema:
+            $ref: '#/definitions/errorModel'
+        '500':
+          $ref: '#/responses/unexpectedError'
+  /ruleTable:
     get:
       tags:
-        - Rule Management
+        - rule management
       operationId: getTableRule
-      summary: Load table rule from SDK.
       description: Load table rule from SDK.
+      consumes: []
       parameters:
-        - $ref: '#/parameters/ruleGroupName'
+        - $ref: '#/parameters/bundleName'
         - $ref: '#/parameters/ruleName'
-        - $ref: '#/parameters/tenantId'
+        - $ref: '#/parameters/tenantKey'
         - $ref: '#/parameters/version'
-        - $ref: '#/parameters/page'
-        - $ref: '#/parameters/pageSize'
       responses:
         '200':
-          description: successful operation
+          description: Successful response of loading table rule from SDK
           schema:
-            $ref: '#/definitions/TableRuleLoadResponse'
+            $ref: '#/definitions/tableRuleResponse'
         '400':
-          description: Invalid status value
-  /businessRule:
+          $ref: '#/responses/invalidRequest'
+        '401':
+          $ref: '#/responses/unauthorised'
+        '404':
+          description: The search results do not exist.
+          schema:
+            $ref: '#/definitions/errorModel'
+        '500':
+          $ref: '#/responses/unexpectedError'
+  /ruleBusiness:
     get:
       tags:
-        - Rule Management
+        - rule management
       operationId: getBusinessRule
-      summary: Load business rule from SDK.
+      consumes: []
       description: Load business rule from SDK.
       parameters:
-        - $ref: '#/parameters/ruleGroupName'
+        - $ref: '#/parameters/ruleSetName'
         - $ref: '#/parameters/ruleName'
-        - $ref: '#/parameters/tenantId'
+        - $ref: '#/parameters/tenantKey'
         - $ref: '#/parameters/version'
       responses:
         '200':
-          description: successful operation
+          description: Successful response of loading business rule from SDK.
           schema:
-            $ref: '#/definitions/BusinessRuleLoadResponse'
+            $ref: '#/definitions/businessRuleResponse'
         '400':
-          description: Invalid status value
+          $ref: '#/responses/invalidRequest'
+        '401':
+          $ref: '#/responses/unauthorised'
+        '404':
+          description: The search results do not exist.
+          schema:
+            $ref: '#/definitions/errorModel'
+        '500':
+          $ref: '#/responses/unexpectedError'
 definitions:
-  Rule:
-    description: Rule entity of both table rule and business rule.
+  ruleSummary:
+    description: Rule summary info of both table rule and business rule.
     type: object
     properties:
       name:
@@ -87,61 +111,52 @@ definitions:
         description: The name of a table rule or business rule.
       lastUpdated:
         type: string
-        format: date
-        description: Last report time of the name.
-      tenantCode:
+        description: Last report time of the rule.
+      tenantKey:
         type: string
         description: Code of the tenant.
-  RuleGroup:
+  ruleGroup:
     description: Rule group entity of table rule or business rule.
     type: object
     properties:
       ruleGroupName:
         type: string
-        description: The name of table rule's bundle or business rule's ruleset.
+        description: The name indicates table rule's bundle or business rule's ruleset.
       ruleList:
         type: array
         items:
-          $ref: '#/definitions/Rule'
+          $ref: '#/definitions/ruleSummary'
         description: The subscribed rules of the group.
       lastUpdated:
         type: string
         description: Last report time of the group.
-  SubscriptionInfo:
+  subscriptionInfo:
     type: object
-    description: Read from subscriber’s own properties.
+    description: A subscription info entity read from subscriber’s own properties.
     properties:
       tableRules:
         type: array
         items:
-          $ref: '#/definitions/RuleGroup'
+          $ref: '#/definitions/ruleGroup'
         description: Group list of table rule.
       businessRules:
         type: array
         items:
-          $ref: '#/definitions/RuleGroup'
-        description: Group list of table rule business rule.
-  SubscriberReport:
-    description: The data model of subscriber report.
+          $ref: '#/definitions/ruleGroup'
+        description: Group list of business rule.
+  subscriptionRequest:
+    description: The request of subscriber report.
     type: object
     properties:
-      key:
-        type: string
-        description: >-
-          UUID that rule engine service generated, null if this is the first
-          time.
       name:
         type: string
         description: 'Subscriber service name, read from subscriber’s own properties.'
-      status:
+      ipAddress:
         type: string
-        description: success or error (status of the subscription)
-      address:
-        type: string
+        pattern: '\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}'
         description: Subscriber’s IP address.
       lastUpdated:
         type: string
-        format: date
         description: Timestamp of when this subscriber reload itself last time.
       metadata:
         type: string
@@ -149,9 +164,22 @@ definitions:
           metadata of the subscriber it wants to use, such as subscriber’s
           service version.
       subscriptionInfo:
-        description: A subscription info entity.
-        $ref: '#/definitions/SubscriptionInfo'
-  TableRuleDefinition:
+        $ref: '#/definitions/subscriptionInfo'
+  subscriptionResponse:
+    description: The response of subscriber report.
+    type: object
+    properties:
+      key:
+        type: string
+        description: >-
+          UUID that rule engine service generated, null if this is the first
+          time.
+      status:
+        type: string
+        description: success or error (status of the subscription)
+      subscriptionInfo:
+        $ref: '#/definitions/subscriptionInfo'
+  tableRuleDefinition:
     type: object
     description: Table rule definition entity.
     properties:
@@ -168,18 +196,20 @@ definitions:
         type: string
       lastUpdated:
         type: string
-        format: date
         description: Timestamp when it’s last updated
       status:
         type: string
-        enum: [Pending,Activated,Dropped]
+        enum:
+          - Pending
+          - Activated
+          - Dropped
       auditId:
         type: integer
-        format: int64
+        format: int32
         description: Foreign key references to the audit table.
-  TableRuleData:
+  tableRuleData:
     type: object
-    description: One row of table rule.
+    description: Table rule entity.
     properties:
       id:
         type: integer
@@ -189,16 +219,16 @@ definitions:
         type: integer
         format: int32
         description: Foreign key.
-      rowContent:
+      ruleContent:
         type: string
-        description: XML Clob with each row content
+        description: XML Clob of rule content.
       tenantKey:
         type: string
-      rowId:
-        type: integer
-        format: int32
-        description: Integer ID of each row, defines the order of each row.
-  BusinessRuleSetDefinition:
+      language:
+        type: string
+      market:
+        type: string
+  businessRuleSetDefinition:
     type: object
     description: Business rule-set definition entity.
     properties:
@@ -216,19 +246,24 @@ definitions:
         description: XML Clob with rule-set definition.
       compiledContent:
         type: string
-        description: Java content compiled from the rule content. Suppose each rule-set definition only generates one java file.
+        format: byte
+        description: >-
+          Java content compiled from the rule content. Suppose each rule-set
+          definition only generates one java file.
       lastUpdated:
         type: string
-        format: date
         description: Timestamp when it’s last updated.
       status:
         type: string
-        enum: [Pending,Activated,Dropped]
+        enum:
+          - Pending
+          - Activated
+          - Dropped
       auditId:
         type: integer
         format: int32
         description: Foreign key references to the audit table.
-  BusinessRule:
+  businessRule:
     type: object
     description: Business rule entity.
     properties:
@@ -245,54 +280,96 @@ definitions:
         description: Name of this business rule.
       tenantKey:
         type: string
-      rowContent:
+      ruleContent:
         type: string
-        description: Taken from the latest version of this business rule received from Console.
+        description: >-
+          Taken from the latest version of this business rule received from
+          Console.
       compiledContent:
         type: string
-        description: Java content compiled from the rule content. Suppose each rule only generates one java file.
-  TableRuleLoadResponse:
-    type: object
-    description: Response model of load table rule interface.
-    properties:
-      definition:
-        type: object
-        $ref: '#/definitions/TableRuleDefinition'
-      rows:
-        type: array
-        description: All rows of the table rule.
-        items:
-          $ref: '#/definitions/TableRuleData'
-      total:
-        type: integer
-        format: int32
-        description: The total rows of the table rule.
-  BusinessRuleLoadResponse:
-    type: object
-    description: Response model of load business rule interface.
-    properties:
-      definition:
-        type: object
-        $ref: '#/definitions/BusinessRuleSetDefinition'
-      content:
-        type: string
         format: byte
-        description: The content of the business rule in byte array.
+        description: >-
+          Java content compiled from the rule content. Suppose each rule only
+          generates one java file.
+  tableRuleResponse:
+    type: object
+    description: Response of loading table rule.
+    properties:
+      definition:
+        type: object
+        $ref: '#/definitions/tableRuleDefinition'
+      data:
+        type: object
+        $ref: '#/definitions/tableRuleData'
+  businessRuleResponse:
+    type: object
+    description: Response of loading business rule.
+    properties:
+      definition:
+        type: object
+        $ref: '#/definitions/businessRuleSetDefinition'
+      contentList:
+        type: array
+        items:
+          type: string
+          format: byte
+          description: >-
+            Java content list compiled from the rule content. Suppose each
+            rule-set definition only generates one java file.
+  errorModel:
+    type: object
+    properties:
+      apiErrors:
+        type: array
+        description: list of one or more errors that have occured
+        items:
+          $ref: '#/definitions/apiError'
+  apiError:
+    type: object
+    required:
+      - errorCode
+      - userMessage
+      - devMessage
+    properties:
+      errorCode:
+        type: string
+        description: >-
+          A Spring validation code/Openjaw error code/Supplier Error describing
+          the type of error
+      devMessage:
+        type: string
+        description: >-
+          A message describing the error in more detail to help the developer
+          learn more about the issue
+      userMessage:
+        type: string
+        description: >-
+          A message describing the error in simple language. May be the same as
+          devMessage in some cases
+      field:
+        type: string
+        description: The field which was at fault for the error
 parameters:
-  ruleGroupName:
-    name: ruleGroupName
+  bundleName:
+    name: bundleName
     in: path
     type: string
     required: true
-    description: The name of table rule's bundle or business rule's ruleset.
+    description: The name of table rule's bundle.
+  ruleSetName:
+    name: ruleSetName
+    in: path
+    type: string
+    required: true
+    description: The name of business rule's ruleset.
   ruleName:
     name: ruleName
     in: path
     type: string
     required: true
     description: The name of a table rule or business rule.
-  tenantId:
-    name: tenantId
+  tenantKey:
+    name: tenantKey
     in: path
     type: string
     required: true
@@ -303,17 +380,16 @@ parameters:
     type: string
     required: true
     description: Rule version.
-  page:
-    name: page
-    in: path
-    type: integer
-    format: int32
-    required: true
-    default: 1
-  pageSize:
-    name: pageSize
-    in: path
-    type: integer
-    format: int32
-    required: true
-    default: 1000
+responses:
+  unexpectedError:
+    description: An unexpected error occurred
+    schema:
+      $ref: '#/definitions/errorModel'
+  invalidRequest:
+    description: The request was invalid
+    schema:
+      $ref: '#/definitions/errorModel'
+  unauthorised:
+    description: User not authorised to access this resource
+    schema:
+      $ref: '#/definitions/errorModel'
